deployments/arr/cleanuparr/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: cleanuparr
  namespace: media
  labels:
    app: cleanuparr
    part-of: cleanuparr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cleanuparr
      part-of: cleanuparr
  template:
    metadata:
      labels:
        app: cleanuparr
        part-of: cleanuparr
    spec:
      containers:
      - name: cleanuparr
        image: ghcr.io/cleanuparr/cleanuparr:latest
        ports:
        - name: cleanuparr
          containerPort: 11011
        volumeMounts:
        - name: cleanuparr
          mountPath: /config
        resources:
          limits:
            memory: 300Mi
          requests:
            memory: 250Mi
        readinessProbe:
          tcpSocket:
            port: cleanuparr
          initialDelaySeconds: 5
          periodSeconds: 10
        livenessProbe:
          tcpSocket:
            port: cleanuparr
          initialDelaySeconds: 15
          periodSeconds: 20
      volumes:
      - name: cleanuparr
        persistentVolumeClaim:
          claimName: cleanuparr
