deployments/arr/cleanuparr/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: cleanuparr-service
  namespace: media
spec:
  type: ClusterIP
  ports:
    - port: 11011
      targetPort: cleanuparr
  selector:
    app: cleanuparr
    part-of: cleanuparr
