deployments/arr/cleanuparr/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: cleanuparr-ingress
  namespace: media
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`www.cleanuparr.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: cleanuparr-service
          port: 11011
    - match: Host(`cleanuparr.local.tigovanroy.space`)
      kind: Rule
      services:
        - name: cleanuparr-service
          port: 11011
      middlewares:
        - name: media-headers
  tls:
    secretName: local-tigovanroy-space-production-tls
